--- a/CBRPD spending explained.ipynb
+++ b/CBRPD spending explained.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Police spending, New Britain Borough and the Central Bucks Regional Police Department.\n",
+    "# [Police spending, New Britain Borough and the Central Bucks Regional Police Department](https://bit.ly/2M4sxEa).\n",
     "### The Bucks County Courier Times used a mix of data from the Pennsylvania Department of Community and Economic Development and 911 data from Bucks County for this story.\n",
     "### This general data analysis is made possible through several Right to Know Law requests to the Bucks County Department of Emergency Communications and the use of a computer programming language called Python.\n",
     "### In an effort to show our work, this Jupyter Notebook will walk through some of the steps taken to clean and analyze this data. "
@@ -132,7 +132,7 @@
    "metadata": {},
    "source": [
     "# DCED 5-year Estimates\n",
-    "### Estimating police spending was a little more complicated. The story is focused on these three communities, but rising police costs are not something only affecting these specific towns. Going through every municipality's budget documents wasn't feasible, but there was some potentially useful information on the DCED's [Municipal Statistics website]\"http://munstats.pa.gov/public/\" that helped fill in these gaps.\n",
+    "### Estimating police spending was a little more complicated. The story is focused on these three communities, but rising police costs are not something only affecting these specific towns. Going through every municipality's budget documents wasn't feasible, but there was some potentially useful information on the DCED's [Municipal Statistics website](http://munstats.pa.gov/public/) that helped fill in these gaps.\n",
     "### A financial data section includes Excel spreadsheets of statewide municipal financial data as recent as 2017 and as far back as 2006."
    ]
   },
